Added Jonathan Shouse's name to header, corrected spelling

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@ body {
 </style>
 
 <body background="Pikachu001.png">
-<h1><strong>CS 374 - Roger Gee, Adam Starbuck, Joathan Shouse, and Ethan Waddle</strong></h1>
+<h1><strong>CS 374 - Roger Gee, Adam Starbuck, Jonathan Shouse, and Ethan Waddle</strong></h1>
 
 <p style="font-size: 150%;">
 <strong>
