Add design document drafts

--- a/www/index.html
+++ b/www/index.html
@@ -1,38 +1,8 @@
 <html>
 
-<style type=text/css>
-body {
-    COLOR: blue
-}
-</style>
+    <body>
+        <h1> CS374 14F SE bleh bleh bla </h1>
 
-<body background="Pikachu001.png">
-<h1><strong>CS 374 - Roger Gee, Adam Starbuck, Jonathan Shouse, and Ethan Waddle</strong></h1>
-
-<p style="font-size: 150%;">
-<strong>
-    I wanna be the very best, <br />
-    Like no one ever was. <br />
-    To catch them is my real test, <br />
-    To train them is my cause. <br />
-<br />
-    I will travel across the land, <br />
-    Searching far and wide. <br />
-    Each Pokemon to understand <br />
-    The power that's inside <br />
-<br />
-    Pokemon, (gotta catch them all) its you and me <br />
-    I know its my destiny <br />
-    Pokemon, oh, you're my best friend <br />
-    In a world we must defend <br />
-<br />
-    Pokemon, (gotta catch them all) a heart so true <br />
-    Our courage will pull us through <br />
-    You teach me and I'll teach you <br />
-    (Po-ke-mon) Gotta catch 'em all <br />
-</strong>
-</p>
-
-</body>
-
+        <p> You might like to read our <a href="aboutus.html">creed</a> to learn more about us. </p>
+    </body>
 </html>
