--- a/www/index(withAJAX).html
+++ b/www/index(withAJAX).html
@@ -26,6 +26,32 @@
 				width: 100%;
 			}
   </style>
+  
+  <script>
+  function showResults(str){
+  	var xmlhttp;
+  	xmlhttp=new XMLHttpRequest();
+  	xmlhttp.onreadystatechange=function()
+	{
+	  if (xmlhttp.readyState==4 && xmlhttp.status==200)
+	    {
+	  	alert(xmlhttp.responseText);
+	    }
+	    else{
+	    	alert("aarg");
+	    }
+	}
+  	xmlhttp.open("GET", "test.php?time="+str,true);
+  	xmlhttp.send();
+  	
+  }
+  
+  function getPageInfo(){
+  		var e=document.getElementById("timeSelect");
+  		var answer=e.options[e.selectedIndex].value
+  		showResults(answer);
+  }
+  </script>
 
 	<title>Hello, World</title>
 
@@ -51,16 +77,16 @@
 	<br>
 	<select id="timeSelect">
       <option>Select time slot</option>
-      <option>I don't care</option>
       <option value="13:00" >1:00pm</option>
       <option value="14:00" >2:00pm</option>
       <option value="15:00" >3:00pm</option>
       <option value="16:00" >4:00pm</option>
       <option value="17:00" >5:00pm</option>
     </select>
-	<button type="button" onclick="document.location.href='test.php'">Find Classes</button>
+	<button type="button" onclick="getPageInfo()">Find Classes</button>
 
     <h2>Conflicts Report:</h2>
+    <div id="out"></div>
 
 </body>
 
