Simple Test Functionality
Using test db and data, the main page will populate a div
dynamically with the results of a query, only taking in
the time selection. currently, only times 2 and 3 show
anything. Note on the code: the result array is indexed by
column, but does not track table it came from. this could
cause errors if tables have identical column names. Casting
a result with an alias may remedy that in the php, but I
have not tested that.

--- a/www/index(withAJAX).html
+++ b/www/index(withAJAX).html
@@ -35,10 +35,7 @@
 	{
 	  if (xmlhttp.readyState==4 && xmlhttp.status==200)
 	    {
-	  	alert(xmlhttp.responseText);
-	    }
-	    else{
-	    	alert("aarg");
+	  	document.getElementById("out").innerHTML=xmlhttp.responseText;
 	    }
 	}
   	xmlhttp.open("GET", "test.php?time="+str,true);
