fixed typo for Thursday string

--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,7 @@
 	<input type="checkbox" name="dow" value="F">F
 	<br>
 	<input type="checkbox" name="dow" value="T">T
-	<input type="checkbox" name="dow" value="T">R
+	<input type="checkbox" name="dow" value="R">R
 	<br>
 	<input type="submit" name="submitButton">
 	</form>
