Changes to website; complete navigation and add pages

--- a/www/aboutus.html
+++ b/www/aboutus.html
@@ -1,39 +1,46 @@
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title> Conflict Calculator </title>
+  </head>
 
-<!-- <style type=text/css>
-body {
-    COLOR: blue
-}
-</style>
---!>
 
-<body background="Pikachu001.png">
-<h1><strong>CS 374 - Roger Gee, Adam Starbuck, Jonathan Shouse, and Ethan Waddle</strong></h1>
-
-<p style="font-size: 150%;">
-<strong>
-    I wanna be the very best, <br />
-    Like no one ever was. <br />
-    To catch them is my real test, <br />
-    To train them is my cause. <br />
-<br />
-    I will travel across the land, <br />
-    Searching far and wide. <br />
-    Each Pokemon to understand <br />
-    The power that's inside <br />
-<br />
-    Pokemon, (gotta catch them all) its you and me <br />
-    I know its my destiny <br />
-    Pokemon, oh, you're my best friend <br />
-    In a world we must defend <br />
-<br />
-    Pokemon, (gotta catch them all) a heart so true <br />
-    Our courage will pull us through <br />
-    You teach me and I'll teach you <br />
-    (Po-ke-mon) Gotta catch 'em all <br />
-</strong>
-</p>
-
-</body>
-
+  <body>
+    <center>
+      <ul id="nav">
+	<li><a href="index.html">Main</a></li>
+	<li><a href="schedule-browser.html">Browse Schedules</a></li>
+	<li><a href="conflicts.html">Conflict Calculator</a></li>
+	<li><a href="aboutus.html">About Us</a></li>
+      </ul>
+      <br>
+      <h1><strong>CS 374 - Roger Gee, Adam Starbuck, Jonathan Shouse, and Ethan Waddle</strong></h1>
+    </center>
+    <hr>
+    <div style="background-image: url(Pikachu001.png);">
+      <p style="font-size: 150%;">
+        <strong>
+          I wanna be the very best, <br />
+          Like no one ever was. <br />
+          To catch them is my real test, <br />
+          To train them is my cause. <br />
+          <br />
+          I will travel across the land, <br />
+          Searching far and wide. <br />
+          Each Pokemon to understand <br />
+          The power that's inside <br />
+          <br />
+          Pokemon, (gotta catch them all) its you and me <br />
+          I know its my destiny <br />
+          Pokemon, oh, you're my best friend <br />
+          In a world we must defend <br />
+          <br />
+          Pokemon, (gotta catch them all) a heart so true <br />
+          Our courage will pull us through <br />
+          You teach me and I'll teach you <br />
+          (Po-ke-mon) Gotta catch 'em all <br />
+        </strong>
+      </p>
+    </div>
+  </body>
 </html>
