--- a/www/index.html
+++ b/www/index.html
@@ -1,70 +1,71 @@
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title> Banner - Main </title>
-  </head>
+<head>
 
-  <body>
-    <center>
-      <ul id="nav">
-	<li><a href="index.html">Main</a></li>
-	<li><a href="schedule-browser.html">Browse Schedules</a></li>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+
+	<title>Course Conflicts</title>
+
+</head>
+<body>
+<center>
+  <ul class="pure-menu pure-menu-open pure-menu-horizontal">
+	<li class="pure-menu-selected"><a href="#">Main</a></li>
+	<li><a href="schedule-browser.html" >Browse Schedules</a></li>
 	<li><a href="conflicts.html">Conflict Calculator</a></li>
 	<li><a href="aboutus.html">About Us</a></li>
-      </ul>
-      <br>
-      <h1>Course Conflict Calculator</h1>
-      <h3>Team 2: Gee, Shouse, Starbuck, Waddle</h3>
-      <h1> Banner Main </h1>
+  </ul>
+<br>
+	<h1>Course Conflict Tester</h1>
+	<h3>Team 2: Gee, Shouse, Starbuck, Waddle</h3>
+<!--	
+    <form name="conflictFinder" target=_top action="script.php">
+	<label>CRN</label>
+	<input type="text" value="" required=true maxlength=5 name ="CRN">
+    
+	<label>New Time</label>
+	<select required=true form="conflictFinder">
+      <option></option>
+      <option>I don't care</option>
+      <option>1:00pm</option>
+      <option>2:00pm</option>
+      <option>3:00pm</option>
+      <option>4:00pm</option>
+      <option>5:00pm</option>
+    </select>
+	<br>
+	<input type="checkbox" name="dow" value="M">M
+	<input type="checkbox" name="dow" value="W">W
+	<input type="checkbox" name="dow" value="F">F
+	<br>
+	<input type="checkbox" name="dow" value="T">T
+	<input type="checkbox" name="dow" value="R">R
+	<br>
+	<input type="submit" name="submitButton">
+	</form>
 
-      <hr>
+	<hr>-->
+	 <h2> Banner Main </h2>
 
-      <form action="banner/student.php" method="get" class="colform">
-        <input type="submit" value="View Students"/>
-      </form>
-      <form action="banner/course.php" method="get" class="colform">
-        <input type="submit" value="View Courses"/>
-      </form>
-      <form action="banner/section.php" method="get" class="colform">
-        <input type="submit" value="View Sections"/>
-      </form>
-      <form action="banner/student-schedule.php" method="get">
-        Banner ID: <input type="text" name="bannerid" />
-        <input type="submit" value="Display Schedule"/>
-      </form>
+        <form action="banner/student-schedule.php" method="get">
+            Banner ID: <input type="text" name="bannerid" />
+            <input type="submit" class="pure-button pure-button-primary" value="Display Schedule"/>
+        </form>
 
-      <!--
-	  <p>Instructions: blee blah blee blah blee blah blee blah blee blah blee blah </p>
-	  <mark>After the user hits go, PHP runs in the background to find conflicts that involve the most <br>
-	    (and most important) students and outputs data beneath here.</mark>
-	  
-	  <br><br>
-	  
-          <form name="conflictFinder" target=_top action="script.php">
-	    <label>CRN</label>
-	    <input type="text" value="" required=true maxlength=5 name ="CRN">
-            
-	    <label>New Time</label>
-	    <select required=true form="conflictFinder">
-              <option></option>
-              <option>I don't care</option>
-              <option>1:00pm</option>
-              <option>2:00pm</option>
-              <option>3:00pm</option>
-              <option>4:00pm</option>
-              <option>5:00pm</option>
-            </select>
-	    <br>
-	    <input type="checkbox" name="dow" value="M">M
-	    <input type="checkbox" name="dow" value="W">W
-	    <input type="checkbox" name="dow" value="F">F
-	    <br>
-	    <input type="checkbox" name="dow" value="T">T
-	    <input type="checkbox" name="dow" value="R">R
-	    <br>
-	    <input type="submit" name="submitButton">
-	  </form>
-	  <button type="button" onclick="alert('Hello world!')">Run Conflicts</button> !-->
-    </center>
-  </body>
+        <hr>
+
+        <form action="banner/student.php" method="get" class="colform">
+            <input type="submit" value="View Students"/>
+        </form>
+        <form action="banner/course.php" method="get" class="colform">
+            <input type="submit" value="View Courses"/>
+        </form>
+        <form action="banner/section.php" method="get" class="colform">
+            <input type="submit" value="View Sections"/>
+        </form>
+	
+</center>
+
+</body>
+
 </html>
