--- a/www/aboutus.html
+++ b/www/aboutus.html
@@ -1,23 +1,24 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title> Conflict Calculator </title>
+	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+    <title> About Us </title>
   </head>
 
 
-  <body>
+  <body >
     <center>
-      <ul id="nav">
+      <ul class="pure-menu pure-menu-open pure-menu-horizontal">
 	<li><a href="index.html">Main</a></li>
 	<li><a href="schedule-browser.html">Browse Schedules</a></li>
 	<li><a href="conflicts.html">Conflict Calculator</a></li>
-	<li><a href="aboutus.html">About Us</a></li>
+	<li class="pure-menu-selected" ><a href="aboutus.html">About Us</a></li>
       </ul>
       <br>
       <h1><strong>CS 374 - Roger Gee, Adam Starbuck, Jonathan Shouse, and Ethan Waddle</strong></h1>
     </center>
     <hr>
-    <div style="background-image: url(Pikachu001.png);">
+    <div style="background-color: white; background-image: url(Pikachu001.png);">
       <p style="font-size: 150%;">
         <strong>
           I wanna be the very best, <br />
