--- a/www/schedule-browser.html
+++ b/www/schedule-browser.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <title> Banner - Student Schedule Browser </title>
 
     <script>
@@ -20,16 +21,16 @@
 
   <body>
     <center>
-      <ul id="nav">
+      <ul class="pure-menu pure-menu-open pure-menu-horizontal">
 	<li><a href="index.html">Main</a></li>
-	<li><a href="schedule-browser.html">Browse Schedules</a></li>
-	<li><a href="conflicts.html">Advanced Conflicts Finder</a></li>
+	<li class="pure-menu-selected"><a href="schedule-browser.html">Browse Schedules</a></li>
+	<li><a href="conflicts.html">Conflict Calculator</a></li>
 	<li><a href="aboutus.html">About Us</a></li>
       </ul>
       <br>
       <h1> Student Schedule Browser </h1>
       Banner ID: <input type="text" id="bannerinput" name="bannerid" />
-      <button type="button" onclick="getSchedule()">Display Schedule</button>
+      <button class="pure-button pure-button-primary" type="button" onclick="getSchedule()">Display Schedule</button>
     </center>
     <hr>
     <!-- display student schedule output in this division -->
