Add student search functionality to website

--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
         <form action="banner/section.php" method="get" class="colform">
             <input type="submit" value="View Sections"/>
         </form>
-	
+	    <a href="student-search.html" class="colform">Student Search</a>
 </center>
 
 </body>
