Add features and corrections to banner

--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
 	<li><a href="aboutus.html">About Us</a></li>
       </ul>
       <br>
-      <h1>Course Conflict Tester</h1>
+      <h1>Course Conflict Calculator</h1>
       <h3>Team 2: Gee, Shouse, Starbuck, Waddle</h3>
       <!--	
                 <form name="conflictFinder" target=_top action="script.php">
@@ -50,6 +50,11 @@
       <form action="banner/student-schedule.php" method="get">
         Banner ID: <input type="text" name="bannerid" />
         <input type="submit" class="pure-button pure-button-primary" value="Display Schedule"/>
+      </form>
+      <br />
+      <form action="banner/show-section.php" method="get">
+        CRN: <input type="text" name="crn" />
+        <input type="submit" class="pure-button pure-button-primary" value="Display Section"/>
       </form>
 
       <hr>
