Edit stylesheet for index.html's buttons

--- a/www/index.html
+++ b/www/index.html
@@ -18,33 +18,7 @@
       <br>
       <h1>Course Conflict Calculator</h1>
       <h3>Team 2: Gee, Shouse, Starbuck, Waddle</h3>
-      <!--	
-                <form name="conflictFinder" target=_top action="script.php">
-	          <label>CRN</label>
-	          <input type="text" value="" required=true maxlength=5 name ="CRN">
-                  
-	          <label>New Time</label>
-	          <select required=true form="conflictFinder">
-                    <option></option>
-                    <option>I don't care</option>
-                    <option>1:00pm</option>
-                    <option>2:00pm</option>
-                    <option>3:00pm</option>
-                    <option>4:00pm</option>
-                    <option>5:00pm</option>
-                  </select>
-	          <br>
-	          <input type="checkbox" name="dow" value="M">M
-	          <input type="checkbox" name="dow" value="W">W
-	          <input type="checkbox" name="dow" value="F">F
-	          <br>
-	          <input type="checkbox" name="dow" value="T">T
-	          <input type="checkbox" name="dow" value="R">R
-	          <br>
-	          <input type="submit" name="submitButton">
-	        </form>
 
-	        <hr>-->
       <h2> Banner Main </h2>
 
       <form action="banner/student-schedule.php" method="get">
@@ -58,18 +32,17 @@
       </form>
 
       <hr>
-
       <form action="banner/student.php" method="get" class="colform">
-        <input type="submit" value="View Students"/>
+        <input type="submit" class="pure-button pure-button-primary" value="View Students"/>
       </form>
       <form action="banner/course.php" method="get" class="colform">
-        <input type="submit" value="View Courses"/>
+        <input type="submit" class="pure-button pure-button-primary" value="View Courses"/>
       </form>
       <form action="banner/section.php" method="get" class="colform">
-        <input type="submit" value="View Sections"/>
+        <input type="submit" class="pure-button pure-button-primary" value="View Sections"/>
       </form>
-      <a href="student-search.html" class="colform">Student Search</a>
-    </center>
+      <a href="student-search.html" class="colform pure-button pure-button-primary">Student Search</a>
+	</center>
 
   </body>
 
