--- a/www/aboutus.html
+++ b/www/aboutus.html
@@ -11,6 +11,7 @@
       <ul class="pure-menu pure-menu-open pure-menu-horizontal">
 	<li><a href="index.html">Main</a></li>
 	<li><a href="schedule-browser.html">Browse Schedules</a></li>
+	<li><a href="section-browser.html" >Browse Sections</a></li>
 	<li><a href="conflicts.html">Conflict Calculator</a></li>
 	<li class="pure-menu-selected" ><a href="aboutus.html">About Us</a></li>
       </ul>
