--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
       <ul class="pure-menu pure-menu-open pure-menu-horizontal">
 	<li class="pure-menu-selected"><a href="#">Main</a></li>
 	<li><a href="schedule-browser.html" >Browse Schedules</a></li>
+	<li><a href="section-browser.html" >Browse Sections</a></li>
 	<li><a href="conflicts.html">Conflict Calculator</a></li>
 	<li><a href="aboutus.html">About Us</a></li>
       </ul>
