--- a/www/section-browser.html
+++ b/www/section-browser.html
@@ -2,18 +2,18 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
-    <title> Banner - Student Schedule Browser </title>
+    <title> Banner - Section Browser </title>
 
     <script>
-    function getSchedule() {
+    function getSection() {
         var request = new XMLHttpRequest;
-        var bannerid = document.getElementById("bannerinput").value;
+        var CRN = document.getElementById("CRN").value;
         request.onreadystatechange = function() {
             if (request.readyState==4 && request.status==200) {
-                document.getElementById("scheduleDisplay").innerHTML = request.responseText;
+                document.getElementById("sectionDisplay").innerHTML = request.responseText;
             }
         }
-        request.open("GET","banner/student-schedule.php?bannerid="+bannerid,true);
+        request.open("GET","banner/show-section.php?crn="+CRN,true);
         request.send();
     }
     </script>
@@ -23,18 +23,18 @@
     <center>
       <ul class="pure-menu pure-menu-open pure-menu-horizontal">
 	<li><a href="index.html">Main</a></li>
-	<li class="pure-menu-selected"><a href="schedule-browser.html">Browse Schedules</a></li>
-	<li><a href="section-browser.html" >Browse Sections</a></li>
+	<li><a href="section-browser.html">Browse Schedules</a></li>
+	<li class="pure-menu-selected"><a href="section-browser.html" >Browse Sections</a></li>
 	<li><a href="conflicts.html">Conflict Calculator</a></li>
 	<li><a href="aboutus.html">About Us</a></li>
       </ul>
       <br>
-      <h1> Student Schedule Browser </h1>
-      Banner ID: <input type="text" id="bannerinput" name="bannerid" />
-      <button class="pure-button pure-button-primary" type="button" onclick="getSchedule()">Display Schedule</button>
+      <h1> Section Browser </h1>
+      CRN: <input type="text" id="CRN" name="CRN" />
+      <button class="pure-button pure-button-primary" type="button" onclick="getSection()">Display Section</button>
     </center>
     <hr>
     <!-- display student schedule output in this division -->
-    <div id="scheduleDisplay"></div>
+    <div id="sectionDisplay"></div>
   </body>
 </html>
