--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,8 @@
       <ul class="pure-menu pure-menu-open pure-menu-horizontal">
 	<li class="pure-menu-selected"><a href="#">Main</a></li>
 	<li><a href="schedule-browser.html" >Browse Schedules</a></li>
-	<li><a href="conflicts.html">Conflict Calculator</a></li>
+  <li><a href="conflicts.html">Conflict Calculator</a></li>
+	<li><a href="CalendarView.html">Interactive Calendar</a></li>
 	<li><a href="aboutus.html">About Us</a></li>
       </ul>
       <br>
