Minor improvements to PHP scripts

--- a/www/schedule-browser.html
+++ b/www/schedule-browser.html
@@ -13,7 +13,7 @@
                 document.getElementById("scheduleDisplay").innerHTML = request.responseText;
             }
         }
-        request.open("GET","banner/student-schedule.php?bannerid="+bannerid,true);
+        request.open("GET","banner/student-schedule.php?bannerid="+bannerid+"&noBackLink=true",true);
         request.send();
     }
     </script>
