Styled some buttons on several PHP pages and also edited the style of conflicts.html very subtly. I think I spelled that right.

--- a/www/student-search.html
+++ b/www/student-search.html
@@ -27,8 +27,8 @@
   </head>
 
   <body>
-    <a href="index.html"> Banner Main </a>
-    <p>
+     <a style= "margin-top:10px;margin-left:10px;" class="pure-button pure-button-primary" href="/index.html">Banner Main</a></div>
+	 <p>
       Enter at most three classes that the student takes. To narrow search results, choose courses that
       vary or that do not contain very many students. In the first box, enter the course subject
       code (e.g. CS, IT, MATH). In the next box, enter the course number (e.g. 374, 211, 377).
@@ -36,7 +36,7 @@
     <center>
       Course 1: <input type="text" id="ct1" /> <input type="text" id="c1" /> <br />
       Course 2: <input type="text" id="ct2" /> <input type="text" id="c2" /> <br />
-      Course 3: <input type="text" id="ct3" /> <input type="text" id="c3" /> <br />
+      Course 3: <input type="text" id="ct3" /> <input type="text" id="c3" /> <br /> <br>
       <button type="button" onclick="doSearch()" class="pure-button pure-button-primary">Find Students</button>
     </center>
 
