--- a/www/index.html
+++ b/www/index.html
@@ -24,16 +24,18 @@
 
 		<h2> Banner Main </h2>
 
-		<form action="banner/student-schedule.php" method="get">
+		<form class="pure-form" action="banner/student-schedule.php" method="get">
 		Banner ID: <input type="text" name="bannerid" />
 		<input type="submit" class="pure-button pure-button-primary" value="Display Schedule"/>
 		</form>
 		<br />
-		<form action="banner/show-section.php" method="get">
+		<form class="pure-form" action="banner/show-section.php" method="get">
 		CRN: <input type="text" name="crn" />
 		<input type="submit" class="pure-button pure-button-primary" value="Display Section"/>
 		</form>
+	<hr>
 	</div>
+	
 	<div id="footer">
 	<hr>
 		<form action="banner/student.php" method="get" class="colform">
