--- a/www/schedule-browser.html
+++ b/www/schedule-browser.html
@@ -30,9 +30,11 @@
       </ul>
       <br>
       <h1> Student Schedule Browser </h1>
+	  <form class="pure-form">
       Banner ID: <input type="text" id="bannerinput" name="bannerid" />
       <button class="pure-button pure-button-primary" type="button" onclick="getSchedule()">Display Schedule</button>
-    </center>
+	  </form>
+	</center>
     <hr>
     <!-- display student schedule output in this division -->
     <div id="scheduleDisplay"></div>
