--- a/www/section-browser.html
+++ b/www/section-browser.html
@@ -30,9 +30,11 @@
       </ul>
       <br>
       <h1> Section Browser </h1>
+	  <form class="pure-form">
       CRN: <input type="text" id="CRN" name="CRN" />
       <button class="pure-button pure-button-primary" type="button" onclick="getSection()">Display Section</button>
-    </center>
+	  </form>
+	</center>
     <hr>
     <!-- display student schedule output in this division -->
     <div id="sectionDisplay"></div>
